--- a/AllgemeineRegelung.css
+++ b/AllgemeineRegelung.css
@@ -1,30 +1,50 @@
-/* https://www.w3schools.com/css/css_counters.asp */
-/* https://www.w3schools.com/cssref/pr_gen_counter-reset.asp */
+/* https://2ality.com/2012/01/numbering-headingshtml.html */
 
 /* // TODO redefine numbering in ol */
 
 body {
-	/* Set "my-sec-counter" to 0 */
-	counter-reset: my-sec-counter;
-	/* --my-sec-counter: 2 */
-  }
-  
-  h2::before {
-	/* Increment "my-sec-counter" by 1 */
-	counter-increment: my-sec-counter;
-	content: "Section " counter(my-sec-counter) ". ";
+	/* create counter "h2counter" and set to 0 */
+	counter-reset: h2counter;
+	counter-reset: h3counter;
   }
 
-ol{
-	/* list-style: none; */
-	/* list-style-type: upper-roman; */
-	/* counter-set: start 100; */
-	counter-reset: inherit;
-	counter-increment: start 30;
+h1 {
+	/* similar to body command: set h2counter to 0 */
+	counter-reset: h2counter;
+}
+  
+h2::before {
+	/* insert counter before tag, \0000a0 is a non-breaking space */
+	content: counter(h2counter) ".\0000a0";
+	counter-increment: h2counter;
 }
 
 h2{
 	font-size: 14;
 	font-style: inherit;
 	font-family: Arial, Helvetica, sans-serif;
+	
+	/* set h3counter to zero */
+	counter-reset: h3counter;
 }
+
+  h3::before{
+	content: counter(h2counter) "." counter(h3counter) ". ";
+	counter-increment: h3counter;
+  }
+
+  ol{
+	list-style-type: none;
+	/* define ls enumerator */
+	counter-reset: olCounter attr(start, number, 100);
+  }
+
+  li{
+	  counter-increment: olCounter;
+  }
+
+  li::before{
+	  /* counter-increment: olCounter; */
+	  content: counter(olCounter) ".\0000a0";
+  }
+
